infrastructure/base/controllers/headlamp/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/part-of: headlamp
